--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>CV - SUAREZ Lucas</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Curriculum vitae de SUAREZ Lucas, actuellement en formation Développeur Web et Web mobile !">
-    <link rel="shortcut icon" href="media/img/photoIdentite.jpg" type="image/x-icon">
+    <title>CV - SUAREZ Lucas</title>
     <link rel="stylesheet" href="style/main.css">
+    <link rel="shortcut icon" href="media/img/photoIdentite.jpg" type="image/x-icon">
 </head>
 <body>
     <!-- Article - Information -->
-    <article>
-
+    <article class="content">
         <!-- Section - Présentation -->
         <section class="fond pre">
             <img src="media/img/photoIdentite.jpg" alt="Photo de SUAREZ Lucas" class="imgTete">
@@ -66,19 +64,19 @@
             <h2>Diplômes et Formation</h2>
             <ul>
                 <li>
-                    <h3>Développeur Web et Web mobile</h3>
+                    <h3>Formation - Développeur Web et Web mobile</h3>
                     <p>Depuis décembre 2024 <strong>CCI de la drôme</strong> Alixan</p>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <h3>BTS Système Numérique option "Informatique et Réseaux"</h3>
+                    <h3>BTS Système Numérique option Informatique et réseaux</h3>
                     <p>De septembre 2021 à juin 2023 <strong>Lycée Algoud-Laffemas</strong> Valence</p>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <h3>BAC PRO Système Numérique option "Réseaux Informatiques et Systèmes Communicants"</h3>
+                    <h3>BAC PRO Système Numérique option Réseaux Informatique et Système Communicants</h3>
                     <p>De septembre 2018 à juin 2021 <strong>Lycée Algoud-Laffemas</strong> Valence</p>
                 </li>
             </ul>
@@ -151,7 +149,7 @@
                 <li>HTML | CSS | JavaScript | Angular</li>
                 <li>PHP | Java</li>
                 <li>SQL</li>
-                <li>Bootstrap</li>
+                <li>Bootstrap | Symfony</li>
                 <li>Python</li>
             </ul>
             <p>Logiciels de développement</p>
@@ -162,11 +160,10 @@
             </ul>
             <p>Autres compétences</p>
             <ul>
-                <li>Wamp / Mamp Server</li>
-                <li>Figma / Photoshop</li>
-                <li>GitHub</li>
+                <li>Wamp Server / Mamp</li>
                 <li>WordPress</li>
                 <li>Linux / Ubuntu</li>
+                <li>Figma</li>
                 <li>Pack Office</li>
             </ul>
         </section>
@@ -174,7 +171,7 @@
         <!-- Section - Références -->
         <section class="fond ref">
             <h2>Références</h2>
-            <p><strong>Christian JUNIQUE</strong></p>
+            <p>Christian JUNIQUE</p>
             <p>Membre de l'équipe GRCcom, ORMA</p>
             <p>CJUNIQUE@orma.fr</p>
         </section>
@@ -195,7 +192,6 @@
             <p>Depuis 2022, je suis bénévole au sein de cette salle de spectacle. Cette expérience me permet d'acquérir des compétences polyvalentes notamment avec l'accueil des spectateurs, la vente ainsi qu'une adaptabilité face à des situations variées et imprévues.
             </p>
         </section>
-
     </article>
 </body>
 </html>
